www.mturk.com/turkopticon.css
mts-to {
  float: left;
  cursor: default;
  margin-right: 2px;
  width: 18px;
  height: 18px;
  border-radius: 9px;
  color: #000000;
  text-align: center;
  font-size: 9px;
  font-weight: bold;
  line-height: 18px;
  -webkit-border-horizontal-spacing: 0px;
  -webkit-border-vertical-spacing: 0px;
}

mts-to-reviews {
  display: none;
  position: absolute;
  transform: translate(0px, -3px);
  width: 400px;
  padding: 3px;
  border: 1px solid;
  border-color: #336699;
  background-color: rgb(240, 246, 249);
  font-size: 11px;
  font-weight: normal;
  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.75);
  line-height: 14px;
}

mts-table {
  display: table;
}

mts-tr {
  display: table-row;
}

mts-th {
  display: table-cell;
}

mts-td {
  display: table-cell;
}

.MTS-info-table mts-td {
  text-align: center;
}

.mts-attr-table {
  width: 100%
}

.mts-attr-table mts-td:nth-child(1), .mts-attr-table mts-td:nth-child(3) {
  color: #336699;
  font-weight: bold;
}

.mts-link-table {
  width: 100%
}

mts-to:hover mts-to-reviews, mts-to-reviews:hover {
  display: block;
}

